fixed it to work on IE8 + > && Kindle

--- a/shopping_list/style.css
+++ b/shopping_list/style.css
@@ -76,7 +76,7 @@ FORM
 
 */
 form {
-	max-width: 18em;		
+	width: 100%;		
 	background-color: #dddfd4;
 }
 legend {
@@ -91,20 +91,23 @@ fieldset {
 input {
 	font-size: 1.3em;
 }
+/*label {
+	background-color: #fae596;
+}*/
+#other {
+	max-width: 10em;
+}
 
 /*
 	INGREDIENTS
 */
 #bread input[type="checkbox"], #toppings input[type="checkbox"],
 #bread input[type="radio"], #toppings input[type="radio"] {
-	float: left;
-	margin: .6em 0;
+	margin: .6em 1em 0 0;
 }
 #bread label, #toppings label {
 	margin: 0;
 	padding: .3em 1em;
-	float: left;
-	clear: left;
 }
 
 /*
@@ -126,6 +129,8 @@ button {
 	border: none;
 	background-color: #3fb0ac;
 	color: white;
+	max-width: -webkit-max-content;
+	max-width: -moz-max-content;
 	max-width: max-content;
 	padding: .3em 1em;
 }
@@ -137,6 +142,7 @@ SHOPPING LIST
 */
 #shopping {
 	max-width: 30em;
+	margin-left: 3em;
 }
 .shopping-list {
 
@@ -148,9 +154,8 @@ li {
 	color: white;
 	font-weight: bold;
 	font-size: 1.3em;
+	list-style-type: none;
 }
-
-
 
 
 /*
@@ -163,17 +168,51 @@ JAVASCRIPT
 	position: absolute;
 	top: 10.5em;
 	background-color: #dddfd4;
-	transition: .3s;
-	transform: translateX(-100%);
+	-webkit-transition: .3s;
+	        transition: .3s;
+	-webkit-transform: translateX(-100%);
+	    -ms-transform: translateX(-100%);
+	        transform: translateX(-100%);
 }
 .show {
-	transition: .3s;
-	transform: translateX(0%);	
+	-webkit-transition: .3s;
+	        transition: .3s;
+	-webkit-transform: translateX(0%);
+	    -ms-transform: translateX(0%);
+	        transform: translateX(0%);	
 }
 .js-button {
-	float: left;
     clear: left;
 }
+.js-drop-area {
+	padding: 1em;
+	min-height: 7em;
+	background-color: #e7e7e7;
+	padding-bottom: 5em;
+}
+.js-input-hide {
+	display: none;
+}
+.js-highlight-label {
+	background-color: #fae596;
+	margin: .3em 0 !important;
+}
 
-
-
+@media(min-width: 820px) {
+	#bread input[type="checkbox"], #toppings input[type="checkbox"],
+	#bread input[type="radio"], #toppings input[type="radio"] {
+		margin: .6em 0;
+		float: left;
+	}
+	#bread label, #toppings label {
+		float: left;
+		clear: left;
+	}
+	form {
+		max-width: 18em;
+	}
+	.js-button {
+		float: left;
+	    clear: left;
+	}
+}
